--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ streamlit==1.17.0
 soundfile
 cffi
 pycparser
+python3.7-venv
+freeglut3-dev
+libgtk2.0-dev
+libasound2-dev
+libsndfile1-dev
+ffmpeg
