--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,406 @@ soundfile
 cffi
 pycparser
 ffmpeg
+adal==1.2.7
+alabaster 
+altair==4.2.0
+anaconda-client==1.11.0
+anaconda-navigator==2.3.2
+anaconda-project 
+anyio 
+appdirs==1.4.4
+argon2-cffi 
+argon2-cffi-bindings 
+arrow 
+astroid 
+astropy 
+async-generator==1.10
+atomicwrites==1.4.0
+attrs 
+audioread 
+Automat 
+autopep8 
+azure-cognitiveservices-search-imagesearch==2.0.0
+azure-common==1.1.28
+azure-core==1.26.2
+Babel 
+backcall 
+backports.functools-lru-cache 
+backports.tempfile 
+backports.weakref==1.0.post1
+bcrypt 
+beautifulsoup4 
+binaryornot 
+bitarray 
+bkcharts==0.2
+black 
+bleach 
+blinker==1.5
+blis==0.7.9
+bokeh 
+boto3 
+botocore 
+Bottleneck 
+brotlipy==0.7.0
+cachetools==5.2.1
+catalogue==2.0.8
+catboost==1.1.1
+certifi 
+cffi 
+chardet 
+charset-normalizer 
+click 
+cloudpickle 
+clyent==1.2.2
+colorama==0.4.6
+colorcet 
+comtypes==1.1.10
+conda==23.1.0
+conda-build==3.22.0
+conda-content-trust 
+conda-pack 
+conda-package-handling 
+conda-repo-cli==1.0.20
+conda-token 
+conda-verify==3.4.2
+confection==0.0.4
+constantly==15.1.0
+cookiecutter 
+cryptography 
+cssselect==1.1.0
+cycler 
+cymem==2.0.7
+Cython 
+cytoolz==0.11.0
+daal4py==2021.6.0
+dask 
+datashader 
+datashape==0.5.4
+debugpy 
+decorator 
+defusedxml 
+diff-match-patch 
+dill 
+distributed 
+docutils 
+entrypoints 
+et-xmlfile==1.1.0
+exceptiongroup==1.1.0
+fastai==2.7.10
+fastcore==1.5.27
+fastdownload==0.0.7
+fastjsonschema 
+fastprogress==1.0.3
+ffmpeg==1.4
+filelock 
+flake8 
+Flask 
+fonttools==4.25.0
+fsspec 
+future 
+gensim 
+gitdb==4.0.10
+GitPython==3.1.30
+glob2 
+google-api-core==2.11.0
+google-api-python-client==2.48.0
+google-auth==2.16.0
+google-auth-httplib2==0.1.0
+google-images-download==2.8.0
+Google-Images-Search==1.4.6
+googleapis-common-protos==1.58.0
+graphviz==0.20.1
+greenlet 
+h11==0.14.0
+h5py 
+HeapDict 
+holoviews 
+httplib2==0.21.0
+hvplot 
+hyperlink 
+icrawler==0.6.6
+idna 
+imagecodecs 
+imageio 
+imagesize 
+importlib-metadata 
+incremental 
+inflection==0.5.1
+iniconfig 
+intake 
+intervaltree 
+ipykernel 
+ipython 
+ipython-genutils 
+ipywidgets 
+isodate==0.6.1
+isort 
+itemadapter 
+itemloaders 
+itsdangerous 
+jdcal 
+jedi 
+jellyfish 
+Jinja2 
+jinja2-time 
+jmespath 
+joblib 
+json5 
+jsonschema 
+jupyter 
+jupyter-console 
+jupyter-contrib-core 
+jupyter-contrib-nbextensions 
+jupyter-highlight-selected-word 
+jupyter-latex-envs 
+jupyter-nbextensions-configurator 
+jupyter-server 
+jupyter_client 
+jupyter_core 
+jupyterlab 
+jupyterlab-pygments 
+jupyterlab-server 
+jupyterlab-widgets 
+jyquickhelper==0.4.220
+keyring 
+kiwisolver 
+langcodes==3.3.0
+lazy-object-proxy 
+libarchive-c 
+librosa 
+llvmlite==0.38.0
+locket 
+lxml 
+lz4 
+Markdown 
+markdown-it-py==2.1.0
+MarkupSafe 
+matplotlib 
+matplotlib-inline 
+mccabe==0.6.1
+mdurl==0.1.2
+menuinst 
+mistune 
+mkl-fft==1.3.1
+mkl-random 
+mkl-service==2.4.0
+mock 
+mpmath==1.2.1
+msgpack 
+msrest==0.7.1
+msrestazure==0.6.4
+multipledispatch 
+munkres==1.1.4
+murmurhash==1.0.9
+mypy-extensions==0.4.3
+navigator-updater==0.3.0
+nb-conda-kernels 
+nbclassic 
+nbclient 
+nbconvert 
+nbformat 
+nest-asyncio 
+networkx 
+nltk 
+nose 
+notebook 
+numba 
+numexpr 
+numpy 
+numpydoc 
+oauthlib==3.2.2
+olefile 
+openpyxl==3.0.10
+outcome==1.2.0
+packaging 
+pandas 
+pandocfilters 
+panel 
+param 
+paramiko 
+parsel 
+parso 
+partd 
+pathlib 
+pathspec 
+pathy==0.10.1
+patsy==0.5.2
+pep8==1.7.1
+pexpect 
+pickleshare 
+Pillow==9.2.0
+pkginfo 
+platformdirs 
+plotly 
+pluggy 
+pooch 
+poyo 
+preshed==3.0.8
+prometheus-client 
+prompt-toolkit 
+Protego 
+protobuf==3.20.3
+psutil 
+ptyprocess 
+py 
+pyarrow==10.0.1
+pyasn1 
+pyasn1-modules==0.2.8
+pycodestyle 
+pycosat==0.6.3
+pycparser 
+pyct 
+pycurl==7.45.1
+pydantic==1.10.4
+pydeck==0.8.0
+PyDispatcher==2.0.5
+pydocstyle 
+pyerfa 
+pyfiglet==0.8.post1
+pyflakes 
+Pygments 
+PyHamcrest 
+PyJWT 
+pylint 
+pyls-spyder==0.4.0
+Pympler==1.0.1
+PyNaCl 
+pyodbc 
+pyOpenSSL 
+pyparsing 
+pyrsistent 
+PySocks 
+pytest==7.1.2
+python-dateutil 
+python-lsp-black 
+python-lsp-jsonrpc==1.0.0
+python-lsp-server 
+python-resize-image==1.1.20
+python-slugify 
+python-snappy 
+pytz 
+pytz-deprecation-shim==0.1.0.post0
+pyviz-comms 
+PyWavelets 
+pywin32==302
+pywin32-ctypes 
+pywinpty 
+PyYAML==6.0
+pyzmq 
+QDarkStyle 
+qstylizer 
+QtAwesome 
+qtconsole 
+QtPy 
+queuelib==1.5.0
+regex 
+requests 
+requests-file 
+requests-oauthlib==1.3.1
+resampy 
+rich==13.2.0
+rope 
+rsa==4.9
+Rtree 
+ruamel-yaml-conda 
+ruamel.yaml 
+ruamel.yaml.clib 
+s3transfer 
+scikit-image 
+scikit-learn 
+scikit-learn-intelex==2021.20221004.171935
+scipy==1.9.1
+Scrapy 
+seaborn 
+selenium==4.7.2
+semver==2.13.0
+Send2Trash 
+service-identity 
+sip==4.19.13
+six 
+smart-open 
+smmap==5.0.0
+sniffio 
+snowballstemmer 
+sortedcollections 
+sortedcontainers 
+soundfile 
+soupsieve 
+spacy==3.5.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+Sphinx 
+sphinxcontrib-applehelp 
+sphinxcontrib-devhelp 
+sphinxcontrib-htmlhelp 
+sphinxcontrib-jsmath 
+sphinxcontrib-qthelp 
+sphinxcontrib-serializinghtml 
+spyder 
+spyder-kernels 
+SQLAlchemy 
+srsly==2.4.5
+statsmodels==0.13.2
+streamlit==1.17.0
+sympy 
+tables==3.6.1
+tabulate 
+TBB==0.2
+tblib 
+tenacity 
+termcolor==1.1.0
+terminado 
+testpath 
+text-unidecode 
+textdistance 
+thinc==8.1.7
+threadpoolctl 
+three-merge 
+tifffile 
+tinycss 
+tldextract 
+toml 
+tomli 
+tomlkit 
+toolz 
+torch==1.13.1
+torchvision==0.14.1
+tornado 
+tqdm 
+traitlets 
+trio==0.22.0
+trio-websocket==0.9.2
+Twisted 
+twisted-iocpsupport 
+typer==0.7.0
+typing_extensions 
+tzdata==2022.7
+tzlocal==4.2
+ujson 
+Unidecode 
+uritemplate==4.1.1
+urllib3 
+validators==0.20.0
+w3lib 
+wasabi==1.1.1
+watchdog 
+wcwidth 
+webencodings==0.5.1
+websocket-client 
+Werkzeug 
+widgetsnbextension 
+win-inet-pton 
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt 
+wsproto==1.2.0
+xarray 
+xlrd 
+XlsxWriter 
+xlwings 
+yapf 
+youtube-dl==2021.12.17
+zict==2.1.0
+zipp 
+zope.interface 
+1
