--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 librosa
-git+https://github.com/yt-dlp/yt-dlp/archive@master
+git+https://github.com/yt-dlp/yt-dlp@master
 numpy
 numpydoc
 matplotlib
