--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 librosa==0.9.2
 pandas==1.5
 git+https://github.com/yt-dlp/yt-dlp@master
-numpy
-numpydoc
-matplotlib
+numpy==1.24.3
+numpydoc==1.5.0
+matplotlib==3.7.1
 matplotlib-inline
 ipython
 ipython-genutils
